# quickjspp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  JSTest.sln  JSTest.vcxproj  JSTest.vcxproj.filters  main.cpp  meson.build  meson_options.txt  qjs.cpp  quickjspp.hpp  readme.md  readme.txt
.github/workflows/: cxx.yml  doxygen.yml  quickjsdll.yml  valgrind.yml
include/: quickjspp.hpp
quickjs/: CMakeLists.txt  README.md  cplusplus.patch  cutils.c  cutils.h  dtoa.c  libbf.c  msvc.patch  quickjs-libc.c  quickjs.c  quickjs.h
quickjs/patches/: 2025-04-26-freebsd.patch  2025-04-26-getclassid-const.patch  2025-04-26-getpropertyvalue_uninitialized_read_fix.patch  2025-04-26-unhandled_rejection.patch  msvc-header-fix.patch
test/: CMakeLists.txt  class.cpp  conversions.cpp  enum.cpp  example.cpp  exception.cpp  exotic.cpp  function_call.cpp  inheritance.cpp  jobs.cpp  module_loader.cpp  multicontext.cpp  point.cpp  unhandled_rejection.cpp  value.cpp  variant.cpp
win32_compat/: dirent.h  time.cpp  unistd.h  utime.h
win32_compat/sys/: time.h
