option('debugger', type : 'boolean', value : false, description : 'Add debugger support')
option('jsx', type : 'boolean', value : false, description : 'Add JSX support')
option('storage', type : 'boolean', value : false, description : 'Add persistent storage support')
option('qjsc', type : 'boolean', value : false, description : 'Build QJSC application')
option('qjs', type : 'boolean', value : false, description : 'Build QJS application (read notes in meson.build)')
